...
    modifier: Modifier = Modifier,
    viewModel: CountryAutoCompleteViewModel = koinViewModel(),
    selectedItem: String = "",
    onCountrySelected: (String) -> Unit
) {
    SearchTextField(
        modifier = modifier.testTag("countrySearch"),
        label = stringResource(R.string.label_country),
        trailingIcon = {
            if (selectedItem.isNotBlank()) {
                InputValidIcon()
            } else {
                Icon(
...
