...
            } else {
                filteredResults
            }
            // Display the dropdown menu
            SdkDropDownMenu(
                modifier = Modifier
                    .testTag("searchResultsDropDown")
                    .width(boxWidth),
                itemWidth = boxWidth,
                expanded = expanded,
                items = dropdownContent,
                dismissOnClickOutside = false,
                isClickEnabled = !isNotClickable, // Enable clicks if results are available
...
