...
            onValueChange = onValueChange,
            modifier = Modifier
                .fillMaxWidth()
                .onFocusChanged {
                    focusedState = it.isFocused
                }
                .testTag("sdkInput")
                .then(
                    if (autofillType != null) {
                        Modifier.autofill(
                            autofillTypes = listOf(autofillType),
                            onFill = onValueChange,
                        )
...
